--- a/lazy_ilya/myauth/templates/myauth/registration.html
+++ b/lazy_ilya/myauth/templates/myauth/registration.html
@@ -7,8 +7,8 @@
 
 {% block body %}
     <main class="flex justify-center items-center min-h-screen py-6">
-        <form method="POST" id="registration-form"
-              class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 overflow-y-auto animate-fade-in">
+        <form method="POST" id="registration-form" action="{% url 'myauth:registration' %}"
+              class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 overflow-y-auto opacity-0 animate-fade-in">
             {% csrf_token %}
             <!-- Переключатель темы внутри формы -->
             <button id="theme-toggle" type="button" class="theme-toggle">
@@ -27,16 +27,16 @@
             <h2 class="text-3xl font-logo text-center text-text-light dark:text-white">Регистрация</h2>
 
             <div>
-                <label for="login-input"
-                       class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                       id="login-label">
+                <label for="username-input"
+                       class="block mb-2 text-sm font-medium correct_label"
+                       id="username-label">
                     Логин
                 </label>
                 <div class="relative">
                     <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none"
                              viewBox="0 0 24 24" stroke-width="1.5"
-                             stroke="currentColor" class="size-6 text-gray-500 dark:text-gray-400" id="login-icon">
+                             stroke="currentColor" class="size-6 correct_icon" id="username-icon">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                   d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963
                       0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12
@@ -45,60 +45,61 @@
                         </svg>
                     </div>
 
-                    <input type="text" id="login-input"
-                           class="w-full ps-12 p-2.5 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                    <input type="text" id="username-input" name="username"
+                           class="w-full ps-12 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
                            placeholder="Придумайте логин">
                 </div>
 
-                <p id="login-error-msg" class="hidden mt-2 text-sm text-red-600 dark:text-red-500">
+                <p id="username-error" class="text-sm pt-2 pl-5 hidden shadow-lg error_message">
                     <span class="font-medium">Ошибка!</span> Поле не должно быть пустым.
                 </p>
             </div>
 
 
             <div>
-                <label for="first-name"
-                       class="block mb-2 font-medium text-text-light dark:text-text-dark"
+                <label for="first-name-input"
+                       class="block mb-2 font-medium correct_label"
                        id="first-name-label">
                     Имя
                 </label>
 
-                <input type="text" id="first-name" name="first-name"
-                       class="w-full ps-4 p-2.5 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                <input type="text" id="first-name-input" name="first_name"
+                       class="w-full ps-4 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
                        placeholder="Имя"
                 >
 
-                <p id="first-name-error-msg" class="hidden mt-2 text-sm text-red-600 dark:text-red-500">
+                <p id="first-name-error" class="text-sm pt-2 pl-5 hidden shadow-lg error_message">
                     <span class="font-medium">Ошибка!</span> Поле не должно быть пустым.
                 </p>
             </div>
 
             <div>
-                <label for="last-name"
-                       class="block mb-2 font-medium text-text-light dark:text-text-dark"
+                <label for="last-name-input"
+                       class="block mb-2 font-medium correct_label"
                        id="last-name-label">
                     Фамилия
                 </label>
 
-                <input type="text" id="last-name" name="last-name"
-                       class="w-full ps-4 p-2.5 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                <input type="text" id="last-name-input" name="last_name"
+                       class="w-full ps-4 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
                        placeholder="Фамилия"
                 >
 
-                <p id="last-name-error-msg" class="hidden mt-2 text-sm text-red-600 dark:text-red-500">
+                <p id="last-name-error" class="text-sm pt-2 pl-5 hidden shadow-lg error_message">
                     <span class="font-medium">Ошибка!</span> Поле не должно быть пустым.
                 </p>
             </div>
 
             <div class="mb-4">
-                <label id="phone-label" for="phone" class="block mb-2 font-medium text-text-light dark:text-text-dark">
+                <label id="phone_number-label" for="phone_number-input"
+                       class="block mb-2 font-medium correct_label">
                     <div class="flex items-center justify-between">
                         <span>Телефон</span>
                         <div class="relative group">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  fill="none" viewBox="0 0 24 24"
                                  stroke-width="1.5" stroke="currentColor"
-                                 class="size-6 text-gray-500 dark:text-gray-400 cursor-pointer">
+                                 class="size-6 correct_icon cursor-pointer">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                       d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0
                      1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442
@@ -117,7 +118,8 @@
                 <div class="relative">
                     <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                             stroke="currentColor" class="size-6 text-gray-500 dark:text-gray-400">
+                             stroke="currentColor" class="size-6 correct_icon"
+                             id="phone_number-icon">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                   d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3"></path>
                         </svg>
@@ -125,62 +127,61 @@
 
                     <input
                             type="tel"
-                            id="phone"
-                            name="phone"
+                            id="phone_number-input"
+                            name="phone_number"
                             placeholder="+7 (___) ___-__-__"
-                            class="w-full ps-12 p-2.5 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                            class="w-full ps-12 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
                     >
                 </div>
-
-
                 <!-- блок ошибки -->
-                <p id="phone-error" class="mt-1 text-sm text-red-500 hidden">
+                <p id="phone_number-error" class="w-85 break-normal text-sm pt-2 pl-5 hidden shadow-lg error_message">
                     Введите корректный номер телефона.
                 </p>
             </div>
 
-
             <div>
-                <label id="password-label" for="password"
-                       class="block mb-2 font-medium text-text-light dark:text-text-dark">Пароль</label>
+                <label id="password1-label" for="password1-input"
+                       class="block mb-2 font-medium correct_label">Пароль</label>
                 <div class="relative">
                     <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                             stroke="currentColor" class="size-6 text-gray-500 dark:text-gray-400">
+                             stroke="currentColor" class="size-6 correct_icon"
+                             id="password1-icon">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                   d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z"></path>
                         </svg>
                     </div>
-                    <input type="password" id="password" name="password"
-                           class="w-full ps-12 p-2.5 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                    <input type="password" id="password1-input" name="password1"
+                           class="w-full ps-12 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
                            placeholder="Пароль"
                     >
                 </div>
                 <!-- блок ошибки -->
-                <p id="password-error" class="mt-1 text-sm text-red-500 hidden">
+                <p id="password1-error" class="text-sm pt-2 pl-5 hidden shadow-lg error_message">
                     Придумайте пароль длиннее 5 символов.
                 </p>
             </div>
 
             <div>
-                <label id="confirm-password-label" for="confirm-password"
-                       class="block mb-2 font-medium text-text-light dark:text-text-dark">Подтверждение
+                <label id="password2-label" for="password2-input"
+                       class="block mb-2 font-medium correct_label">Подтверждение
                     пароля</label>
                 <div class="relative">
                     <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                             stroke="currentColor" class="size-6 text-gray-500 dark:text-gray-400">
+                             stroke="currentColor" class="size-6 correct_icon"
+                             id="password2-icon">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                   d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z"></path>
                         </svg>
                     </div>
-                    <input type="password" id="confirm-password" name="confirm-password"
-                           class="w-full ps-12 p-2.5 border border-gray-300 dark:border-gray-700 text-text-light rounded-lg bg-body-light dark:bg-body-dark focus:outline-none focus:ring-2 focus:ring-blue-400 transition"
+                    <input type="password" id="password2-input" name="password2"
+                           class="w-full ps-12 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
                            placeholder="Повторить ввод пароля"
                     >
                 </div>
                 <!-- блок ошибки -->
-                <p id="confirm-password-error" class="mt-1 text-sm text-red-500 hidden">
+                <p id="password2-error" class="break-normal w-64 text-sm pt-2 pl-5 hidden shadow-lg error_message">
                     Кожаный, будь внимательнее! Пароли не совпали.
                 </p>
             </div>
@@ -204,7 +205,11 @@
     </main>
 {% endblock %}
 {% block extra_js %}
-    <script type="module" src="{%  static 'myauth/js/registration.js' %}"></script>
+    {% if VITE_DEV_MODE %}
+        <script type="module" src="http://localhost:5173/src/js/registration.js"></script>
+    {% else %}
+        <script type="module" crossorigin src="{% static 'myauth/js/registration.js' %}"></script>
+    {% endif %}
 {% endblock %}
 
 
