Форма сброса пароля

--- a/lazy_ilya/myauth/templates/myauth/login.html
+++ b/lazy_ilya/myauth/templates/myauth/login.html
@@ -67,7 +67,7 @@
             <div>
                 <div class="flex justify-between items-center mb-2">
                     <label for="password" id="password-label" class="correct_label font-medium">Пароль</label>
-                    <a href="#" class="text-sm text-blue-500 hover:underline dark:text-blue-400">Забыли пароль?</a>
+                    <a href="{% url 'myauth:reset-password' %}" class="text-sm text-blue-500 hover:underline dark:text-blue-400">Забыли пароль?</a>
                 </div>
 
                 <div class="relative">
