--- a/lazy_ilya/myauth/templates/myauth/reset_password.html
+++ b/lazy_ilya/myauth/templates/myauth/reset_password.html
@@ -2,12 +2,12 @@
 {% load static %}
 
 {% block title %}
-    Регистрация
+    Сброс пароля
 {% endblock %}
 
 {% block body %}
     <main class="flex justify-center items-center min-h-screen py-6">
-        <form method="POST" id="registration-form" action="{% url 'myauth:registration' %}"
+        <form method="POST" id="reset-password-form" action="{% url 'myauth:reset-password' %}"
               class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 overflow-y-auto opacity-0 animate-fade-in">
             {% csrf_token %}
             <!-- Переключатель темы внутри формы -->
@@ -24,8 +24,7 @@
                 </svg>
             </button>
 
-            <h2 class="text-3xl font-logo text-center text-text-light dark:text-white">Регистрация</h2>
-
+            <h2 class="text-3xl font-logo text-center text-text-light dark:text-white">Сброс пароля</h2>
             <div>
                 <label for="username-input"
                        class="block mb-2 text-sm font-medium correct_label"
@@ -47,45 +46,10 @@
 
                     <input type="text" id="username-input" name="username"
                            class="w-full ps-12 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
-                           placeholder="Придумайте логин">
+                           placeholder="Логин при регистриции">
                 </div>
 
                 <p id="username-error" class="text-sm pt-2 pl-5 hidden shadow-lg error_message">
-                    <span class="font-medium">Ошибка!</span> Поле не должно быть пустым.
-                </p>
-            </div>
-
-
-            <div>
-                <label for="first-name-input"
-                       class="block mb-2 font-medium correct_label"
-                       id="first-name-label">
-                    Имя
-                </label>
-
-                <input type="text" id="first-name-input" name="first_name"
-                       class="w-full ps-4 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
-                       placeholder="Имя"
-                >
-
-                <p id="first-name-error" class="text-sm pt-2 pl-5 hidden shadow-lg error_message">
-                    <span class="font-medium">Ошибка!</span> Поле не должно быть пустым.
-                </p>
-            </div>
-
-            <div>
-                <label for="last-name-input"
-                       class="block mb-2 font-medium correct_label"
-                       id="last-name-label">
-                    Фамилия
-                </label>
-
-                <input type="text" id="last-name-input" name="last_name"
-                       class="w-full ps-4 p-2.5 border rounded-lg focus:outline-none focus:ring-2 transition correct_input"
-                       placeholder="Фамилия"
-                >
-
-                <p id="last-name-error" class="text-sm pt-2 pl-5 hidden shadow-lg error_message">
                     <span class="font-medium">Ошибка!</span> Поле не должно быть пустым.
                 </p>
             </div>
@@ -110,7 +74,7 @@
                             <!-- Tooltip -->
                             <div
                                     class="absolute right-0 bottom-full mb-1 w-auto whitespace-nowrap p-2 text-center text-sm text-white bg-gray-700 rounded shadow-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300 z-10">
-                                Номер телефона нужен для восстановления пароля.
+                                Номер телефона, который указывали при регитсрации.
                             </div>
                         </div>
                     </div>
@@ -196,19 +160,14 @@
                     Отменить
                 </button>
             </div>
-
-            <p class="text-center text-sm text-text-light dark:text-text-dark">
-                Уже есть аккаунт?
-                <a href="{% url 'myauth:login' %}" class="text-blue-500 hover:underline dark:text-blue-400">Войти</a>
-            </p>
         </form>
     </main>
 {% endblock %}
 {% block extra_js %}
     {% if VITE_DEV_MODE %}
-        <script type="module" src="http://localhost:5173/src/js/registration.js"></script>
+        <script type="module" src="http://localhost:5173/src/js/resetpassword.js"></script>
     {% else %}
-        <script type="module" crossorigin src="{% static 'myauth/js/registration.js' %}"></script>
+        <script type="module" crossorigin src="{% static 'myauth/js/resetpassword.js' %}"></script>
     {% endif %}
 {% endblock %}
 
