--- a/lazy_ilya/myauth/templates/myauth/login.html
+++ b/lazy_ilya/myauth/templates/myauth/login.html
@@ -109,7 +109,7 @@
 
 {% block extra_js %}
     {% if VITE_DEV_MODE %}
-        <script type="module" src="http://localhost:5173/src/js/login.js"></script>
+        <script type="module" src="http://localhost:5173/src/myauth/js/login.js"></script>
     {% else %}
         <script type="module" crossorigin src="{% static 'myauth/js/login.js' %}"></script>
     {% endif %}
