--- a/lazy_ilya/myauth/templates/myauth/reset_password.html
+++ b/lazy_ilya/myauth/templates/myauth/reset_password.html
@@ -165,9 +165,9 @@
 {% endblock %}
 {% block extra_js %}
     {% if VITE_DEV_MODE %}
-        <script type="module" src="http://localhost:5173/src/js/resetpassword.js"></script>
+        <script type="module" src="http://localhost:5173/src/myauth/js/reset_password.js"></script>
     {% else %}
-        <script type="module" crossorigin src="{% static 'myauth/js/resetpassword.js' %}"></script>
+        <script type="module" crossorigin src="{% static 'myauth/js/reset_password.js' %}"></script>
     {% endif %}
 {% endblock %}
 
