--- a/lazy_ilya/myauth/templates/myauth/base.html
+++ b/lazy_ilya/myauth/templates/myauth/base.html
@@ -15,7 +15,7 @@
     {% else %}
         <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
         <script type="module" crossorigin src="{% static 'myauth/js/base.js' %}"></script>
-        <link rel="stylesheet" crossorigin href="{% static 'myauth/css/base.css' %}">
+        <link rel="stylesheet" crossorigin href="{% static 'css/base.css' %}">
     {% endif %}
 </head>
 <body class="bg-body-light dark:bg-body-dark transition-all duration-300 font-roboto">
