--- a/lazy_ilya/myauth/templates/myauth/reset_password.html
+++ b/lazy_ilya/myauth/templates/myauth/reset_password.html
@@ -153,7 +153,7 @@
             <div class="flex justify-center items-center space-x-4">
                 <button id="submit-btn" type="submit"
                         class="btn-submit">
-                    Зарегистрироваться
+                    Сменить пароль
                 </button>
                 <button type="button" onclick="window.location.href='{% url 'myauth:login' %}'"
                         class="btn-cancel">
