--- a/lazy_ilya/myauth/templates/myauth/reset_password.html
+++ b/lazy_ilya/myauth/templates/myauth/reset_password.html
@@ -8,7 +8,7 @@
 {% block body %}
     <main class="flex justify-center items-center min-h-screen py-6">
         <form method="POST" id="reset-password-form" action="{% url 'myauth:reset-password' %}"
-              class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg w-full max-w-md space-y-6 overflow-y-auto opacity-0 animate-fade-in">
+              class="relative bg-nav-ligth dark:bg-nav-dark p-8 rounded-lg shadow-lg shadow-nav-ligth/50 dark:shadow-nav-dark:50 w-full max-w-md space-y-6 overflow-y-auto opacity-0 animate-fade-in">
             {% csrf_token %}
             <!-- Переключатель темы внутри формы -->
             <button id="theme-toggle" type="button" class="theme-toggle">
